@@ -2,7 +2,16 @@
 CHANGE LOG
 =========================================================================
 
-2011-09-19 Jason Vertrees <Jason.Vertrees@schrodinger.com>	
+2011-09-19 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
+	* Added Display > Roving Detail
+
+	* Removed AttributeError on coloring volumes; needs better
+	solution though
+
+	* Added polar contacts/hydrogen bonds to the Measurement wizard
+
+2011-09-19 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
 	* Doc fix
 
